--- a/index.html
+++ b/index.html
@@ -14,15 +14,29 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/styles.css">
 
+    <!-- Import Google Model Viewer -->
+    <script type="module" src="https://unpkg.com/@google/model-viewer"></script>
+
 </head>
 <body>
 
     <div class="container mt-5">
         <h1 class="text-center">Mosshead Warbonnet Project</h1>
-        <p class="text-center">This is a placeholder for content.</p>
+
+        <!-- Model Viewer Component -->
+        <model-viewer 
+            src="models/mosshead-warbonnet.glb" 
+            alt="Mosshead Warbonnet 3D Model"
+            camera-controls 
+            auto-rotate 
+            ar
+            ar-modes="webxr scene-viewer quick-look"
+            shadow-intensity="1"
+            style="width: 100%; max-width: 600px; height: 400px; display: block; margin: auto;">
+        </model-viewer>
     </div>
 
-    <!-- Bootstrap Bundle with Popper (Needed for Popovers, Tooltips, etc.) -->
+    <!-- Bootstrap Bundle with Popper -->
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">
     </script>
