--- a/index.html
+++ b/index.html
@@ -34,25 +34,29 @@
             shadow-intensity="1"
             style="width: 100%; max-width: 600px; height: 400px; display: block; margin: auto;">
         </model-viewer>
-        
-        <!-- Buttons for Popovers -->
+
+        <!-- Buttons for Popovers (use <a> for dismiss on focus) -->
         <div class="d-flex justify-content-center mt-4">
-            <button 
+            <a 
+                tabindex="0" 
                 class="btn btn-info m-2" 
                 data-bs-toggle="popover" 
                 title="Mosshead Warbonnet Info" 
                 data-bs-content="The Mosshead Warbonnet is a fascinating fish with unique features."
-                data-bs-placement="top">
+                data-bs-placement="top"
+                data-bs-trigger="focus">
                 Fish Info
-            </button>
-            <button 
+            </a>
+            <a 
+                tabindex="0" 
                 class="btn btn-info m-2" 
                 data-bs-toggle="popover" 
                 title="Habitat" 
                 data-bs-content="This fish is typically found in rocky habitats."
-                data-bs-placement="top">
+                data-bs-placement="top"
+                data-bs-trigger="focus">
                 Habitat
-            </button>
+            </a>
         </div>
     </div>
 
@@ -63,14 +67,6 @@
 
     <!-- Custom JavaScript -->
     <script src="js/script.js"></script>
-
-    <!-- Initialize Bootstrap Popovers -->
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]');
-            const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl));
-        });
-    </script>
 
 </body>
 </html>
