--- a/index.html
+++ b/index.html
@@ -57,6 +57,26 @@
                 data-bs-trigger="focus">
                 Habitat
             </a>
+            <a 
+                tabindex="0" 
+                class="btn btn-info m-2" 
+                data-bs-toggle="popover" 
+                title="Head" 
+                data-bs-content="The Mosshead Warbonnet has a punk rock mowhawk type head that resembles rocks to help it keep it self camoflauged."
+                data-bs-placement="top"
+                data-bs-trigger="focus">
+                Head
+            </a>
+            <a 
+                tabindex="0" 
+                class="btn btn-info m-2" 
+                data-bs-toggle="popover" 
+                title="Camoflauged" 
+                data-bs-content="This fish has a camoflauged body made up of scales to keep it protected from predators."
+                data-bs-placement="top"
+                data-bs-trigger="focus">
+                Camoflauged
+            </a>
         </div>
     </div>
 
