adding boilerplate for fun facts section

--- a/index.html
+++ b/index.html
@@ -46,6 +46,44 @@
         </div>
     </header>
 
+    <!-- Fun Facts Section -->
+<section id="facts" class="fun-facts">
+    <div class="container">
+        <h2 class="text-center mb-5">Fun Facts About the Mosshead Warbonnet</h2>
+
+        <div class="row align-items-center mb-4">
+            <div class="col-md-6">
+                <img src="images/placeholder1.jpg" alt="Fact 1" class="img-fluid rounded">
+            </div>
+            <div class="col-md-6">
+                <h3>Fact 1</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+        </div>
+
+        <div class="row align-items-center mb-4 flex-md-row-reverse">
+            <div class="col-md-6">
+                <img src="images/placeholder2.jpg" alt="Fact 2" class="img-fluid rounded">
+            </div>
+            <div class="col-md-6">
+                <h3>Fact 2</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+        </div>
+
+        <div class="row align-items-center mb-4">
+            <div class="col-md-6">
+                <img src="images/placeholder3.jpg" alt="Fact 3" class="img-fluid rounded">
+            </div>
+            <div class="col-md-6">
+                <h3>Fact 3</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
     <!-- Main Content -->
     <div class="container mt-5">
         <h1 class="text-center">Mosshead Warbonnet Project</h1>
