completing styling for checkerboard appearance, fun fact section

--- a/index.html
+++ b/index.html
@@ -53,31 +53,38 @@
 
         <div class="row align-items-center mb-4">
             <div class="col-md-6">
-                <img src="images/placeholder1.jpg" alt="Fact 1" class="img-fluid rounded">
+                <img src="images/mosshead-warbonnet-head.jpg" alt="Fact 1" class="img-fluid rounded">
             </div>
             <div class="col-md-6">
-                <h3>Fact 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <div class="fact-text">
+                <h3>"Punk Rock" Look</h3>
+                <p>Some people compare the mosshead warbonnet's appearance to a "punk rock" hairstyle due to the messy, protruding cirri on its head. .</p>
+            </div>
             </div>
         </div>
 
         <div class="row align-items-center mb-4 flex-md-row-reverse">
             <div class="col-md-6">
-                <img src="images/placeholder2.jpg" alt="Fact 2" class="img-fluid rounded">
+                <img src="images/rocky-pacific-coast.jpg" alt="Fact 2" class="img-fluid rounded">
             </div>
             <div class="col-md-6">
-                <h3>Fact 2</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <div class="fact-text">
+                <h3>Pacific Coast Inhabitant</h3>
+                <p>You can primarily find the mosshead warbonnet in the temperate waters of the North Pacific Ocean, particularly along the coast of California. </p>
+            </div>
             </div>
         </div>
 
         <div class="row align-items-center mb-4">
             <div class="col-md-6">
-                <img src="images/placeholder3.jpg" alt="Fact 3" class="img-fluid rounded">
+                <img src="images/6-inches.jpeg" alt="Fact 3" class="img-fluid rounded">
             </div>
             <div class="col-md-6">
-                <h3>Fact 3</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <div class="fact-text">
+                <h3>Small Size</h3>
+                <p>These fish are relatively small, typically only growing up to around 6 inches long. That's the size of a One Dollar Bill!
+                </p>
+            </div>
             </div>
         </div>
     </div>
