--- a/index.html
+++ b/index.html
@@ -1,164 +1,251 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mosshead Warbonnet</title>
-    
+
     <!-- Bootstrap CSS -->
-    <link 
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
-        rel="stylesheet"
-    >
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" />
 
     <!-- Import Google Model Viewer -->
     <script type="module" src="https://unpkg.com/@google/model-viewer"></script>
-
-</head>
-<body data-bs-spy="scroll" data-bs-target="#navbar">
-
-    <!-- Navbar -->
-    <nav id="navbar" class="navbar navbar-expand-lg fixed-top">
-        <div class="container">
-            <a class="navbar-brand text-white" href="#">Warbonnet</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#facts">Fun Facts</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#model">3D Model</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+  </head>
+  <body data-bs-spy="scroll" data-bs-target="#navbar">
+<!-- Navbar -->
+<nav id="navbar" class="navbar navbar-expand-lg navbar-dark fixed-top" style="background: rgba(0, 0, 0, 0.8);">
+    <div class="container">
+      <a class="navbar-brand" href="#">Warbonnet</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <!-- Home scrolls to the top (hero) -->
+          <li class="nav-item">
+            <a class="nav-link" href="#home">Home</a>
+          </li>
+          <!-- 3D Model -->
+          <li class="nav-item">
+            <a class="nav-link" href="#model">3D Model</a>
+          </li>
+          <!-- Fun Facts -->
+          <li class="nav-item">
+            <a class="nav-link" href="#facts">Fun Facts</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
 
     <!-- Hero Section -->
-    <header class="hero">
-        <div class="hero-overlay"></div>
-        <div class="hero-content">
-            <h1>Mosshead Warbonnet</h1>
-            <p class="lead">A fascinating little fish with a unique appearance and habitat.</p>
-        </div>
+    <header id="home" class="hero">
+      <div class="hero-overlay"></div>
+      <div class="hero-content">
+        <h1>Mosshead Warbonnet</h1>
+        <p class="lead">
+          A fascinating little fish with a unique appearance and habitat.
+        </p>
+      </div>
     </header>
 
-    <!-- Fun Facts Section -->
-<section id="facts" class="fun-facts">
-    <div class="container">
+    <!-- Model Section (placed at the top) -->
+    <section id="model" class="model-viewer-section">
+      <div class="container mt-5">
+        <h1 class="text-center">Monsters Of The Sea</h1>
+        <!-- Model Viewer Component -->
+        <model-viewer
+          src="models/mosshead-warbonnet.glb"
+          alt="Mosshead Warbonnet 3D Model"
+          camera-controls
+          auto-rotate
+          ar
+          ar-modes="webxr scene-viewer quick-look"
+          shadow-intensity="1"
+          style="
+            width: 100%;
+            max-width: 600px;
+            height: 400px;
+            display: block;
+            margin: auto;
+          "
+        >
+        </model-viewer>
+
+        <!-- Buttons for Popovers -->
+        <div class="d-flex justify-content-center mt-4">
+          <!-- Predators -->
+          <a
+            tabindex="0"
+            class="btn btn-info m-2"
+            data-bs-toggle="popover"
+            data-bs-html="true"
+            data-bs-content='
+            <div class="card" style="width: 18rem;">
+              <img src="images/cormorant-bird.jpg" class="card-img-top" alt="Predators Image">
+              <div class="card-body">
+                <p class="card-text">
+                  Predators include larger fish such as the rockfish, as well as diving sea birds such as the cormorant.
+                </p>
+              </div>
+            </div>'
+            data-bs-placement="top"
+            data-bs-trigger="focus"
+          >
+            Predators
+          </a>
+
+          <!-- Habitat -->
+          <a
+            tabindex="0"
+            class="btn btn-info m-2"
+            data-bs-toggle="popover"
+            data-bs-html="true"
+            data-bs-content='
+            <div class="card" style="width: 18rem;">
+              <img src="images/kelp-forest.jpg" class="card-img-top" alt="Habitat Image">
+              <div class="card-body">
+                <p class="card-text">
+                  The habitat consists of rocky reefs and kelp forests. Living in the inter tidal zone it is found at depths around 328 feet deep.
+                </p>
+              </div>
+            </div>'
+            data-bs-placement="top"
+            data-bs-trigger="focus"
+          >
+            Habitat
+          </a>
+
+          <!-- Head -->
+          <a
+            tabindex="0"
+            class="btn btn-info m-2"
+            data-bs-toggle="popover"
+            data-bs-html="true"
+            data-bs-content='
+            <div class="card" style="width: 18rem;">
+              <img src="images/mhwb-head.jpg" class="card-img-top" alt="Head Image">
+              <div class="card-body">
+                <p class="card-text">
+                  It has moss-like hair making it hard for prey to detect them. The hair-like filaments offer camouflage within the algae and seaweed.
+                </p>
+              </div>
+            </div>'
+            data-bs-placement="top"
+            data-bs-trigger="focus"
+          >
+            Head
+          </a>
+
+          <!-- Camouflage -->
+          <a
+            tabindex="0"
+            class="btn btn-info m-2"
+            data-bs-toggle="popover"
+            data-bs-html="true"
+            data-bs-content='
+            <div class="card" style="width: 18rem;">
+              <img src="images/mhwb-camo.jpeg" class="card-img-top" alt="Camouflage Image">
+              <div class="card-body">
+                <p class="card-text">
+                  With its vibrant colors it uses camouflage to help blend into the algae as it awaits for its prey to come close before striking. The mosshead warbonnet also uses camouflage to hide from its predators.
+                </p>
+              </div>
+            </div>'
+            data-bs-placement="top"
+            data-bs-trigger="focus"
+          >
+            Camouflage
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Fun Facts Section (info cards placed below the model) -->
+    <section id="facts" class="fun-facts">
+      <div class="container">
         <h2 class="text-center mb-5">Fun Facts About the Mosshead Warbonnet</h2>
 
         <div class="row align-items-center mb-4">
-            <div class="col-md-6">
-                <img src="images/mosshead-warbonnet-head.jpg" alt="Fact 1" class="img-fluid rounded">
+          <div class="col-md-6">
+            <img
+              src="images/mosshead-warbonnet-head.jpg"
+              alt="Fact 1"
+              class="img-fluid rounded"
+            />
+          </div>
+          <div class="col-md-6">
+            <div class="fact-text">
+              <h3>"Punk Rock" Look</h3>
+              <p>
+                Some people compare the mosshead warbonnet's appearance to a
+                "punk rock" hairstyle due to the messy, protruding cirri on its
+                head.
+              </p>
             </div>
-            <div class="col-md-6">
-                <div class="fact-text">
-                <h3>"Punk Rock" Look</h3>
-                <p>Some people compare the mosshead warbonnet's appearance to a "punk rock" hairstyle due to the messy, protruding cirri on its head. .</p>
-            </div>
-            </div>
+          </div>
         </div>
 
         <div class="row align-items-center mb-4 flex-md-row-reverse">
-            <div class="col-md-6">
-                <img src="images/rocky-pacific-coast.jpg" alt="Fact 2" class="img-fluid rounded">
+          <div class="col-md-6">
+            <img
+              src="images/rocky-pacific-coast.jpg"
+              alt="Fact 2"
+              class="img-fluid rounded"
+            />
+          </div>
+          <div class="col-md-6">
+            <div class="fact-text">
+              <h3>Pacific Coast Inhabitant</h3>
+              <p>
+                You can primarily find the mosshead warbonnet in the temperate
+                waters of the North Pacific Ocean, particularly along the coast
+                of California.
+              </p>
             </div>
-            <div class="col-md-6">
-                <div class="fact-text">
-                <h3>Pacific Coast Inhabitant</h3>
-                <p>You can primarily find the mosshead warbonnet in the temperate waters of the North Pacific Ocean, particularly along the coast of California. </p>
-            </div>
-            </div>
+          </div>
         </div>
 
         <div class="row align-items-center mb-4">
-            <div class="col-md-6">
-                <img src="images/6-inches.jpeg" alt="Fact 3" class="img-fluid rounded">
+          <div class="col-md-6">
+            <img
+              src="images/6-inches.jpeg"
+              alt="Fact 3"
+              class="img-fluid rounded"
+            />
+          </div>
+          <div class="col-md-6">
+            <div class="fact-text">
+              <h3>Small Size</h3>
+              <p>
+                These fish are relatively small, typically only growing up to
+                around 6 inches long. That's the size of a One Dollar Bill!
+              </p>
             </div>
-            <div class="col-md-6">
-                <div class="fact-text">
-                <h3>Small Size</h3>
-                <p>These fish are relatively small, typically only growing up to around 6 inches long. That's the size of a One Dollar Bill!
-                </p>
-            </div>
-            </div>
+          </div>
         </div>
-    </div>
-</section>
-
-
-    <!-- Main Content -->
-    <div class="container mt-5">
-        <h1 class="text-center">Mosshead Warbonnet Project</h1>
-
-        <!-- Model Viewer Component -->
-        <model-viewer 
-            src="models/mosshead-warbonnet.glb" 
-            alt="Mosshead Warbonnet 3D Model"
-            camera-controls 
-            auto-rotate 
-            ar
-            ar-modes="webxr scene-viewer quick-look"
-            shadow-intensity="1"
-            style="width: 100%; max-width: 600px; height: 400px; display: block; margin: auto;">
-        </model-viewer>
-
-        <!-- Buttons for Popovers (use <a> for dismiss on focus) -->
-        <div class="d-flex justify-content-center mt-4">
-            <a 
-                tabindex="0" 
-                class="btn btn-info m-2" 
-                data-bs-toggle="popover" 
-                title="Mosshead Warbonnet Info" 
-                data-bs-content="The Mosshead Warbonnet is a fascinating fish with unique features."
-                data-bs-placement="top"
-                data-bs-trigger="focus">
-                Fish Info
-            </a>
-            <a 
-                tabindex="0" 
-                class="btn btn-info m-2" 
-                data-bs-toggle="popover" 
-                title="Habitat" 
-                data-bs-content="This fish is typically found in rocky habitats."
-                data-bs-placement="top"
-                data-bs-trigger="focus">
-                Habitat
-            </a>
-            <a 
-                tabindex="0" 
-                class="btn btn-info m-2" 
-                data-bs-toggle="popover" 
-                title="Head" 
-                data-bs-content="The Mosshead Warbonnet has a punk rock mohawk-type head that resembles rocks to help it camouflage."
-                data-bs-placement="top"
-                data-bs-trigger="focus">
-                Head
-            </a>
-            <a 
-                tabindex="0" 
-                class="btn btn-info m-2" 
-                data-bs-toggle="popover" 
-                title="Camouflaged" 
-                data-bs-content="This fish has a camouflaged body made up of scales to keep it protected from predators."
-                data-bs-placement="top"
-                data-bs-trigger="focus">
-                Camouflaged
-            </a>
-        </div>
-    </div>
+      </div>
+    </section>
 
     <!-- Bootstrap Bundle with Popper -->
-    <script 
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom JavaScript -->
     <script src="js/script.js"></script>
-
-</body>
+  </body>
 </html>
