--- a/index.html
+++ b/index.html
@@ -242,6 +242,13 @@
       </div>
     </section>
 
+     <!-- Footer -->
+     <footer class="text-center py-3" style="background: rgba(0, 0, 0, 0.8); color: #fff;">
+        <p>
+            Page developed by Hunter Mustain with creative design, and content by Romy Mustain.
+          </p>
+      </footer>
+
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
