--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!-- Navbar -->
 <nav id="navbar" class="navbar navbar-expand-lg navbar-dark fixed-top" style="background: rgba(0, 0, 0, 0.8);">
     <div class="container">
-      <a class="navbar-brand" href="#">Warbonnet</a>
+      <a class="navbar-brand" href="#">Mosshead Warbonnet</a>
       <button
         class="navbar-toggler"
         type="button"
